force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Fee_Schedules_contract__c/Fee_Schedules_contract__c.object-meta.xml
<CustomObject>
    <label>Fee Schedules contract</label>
    <nameField>
        <displayFormat>FSC-{0000}</displayFormat>
        <label>Fee Schedules Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Schedules contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>