force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Fee_Schedules_contract__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fee Schedules</relationshipLabel>
    <relationshipName>Fee_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>