force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Fee_Schedules_contract__c/fields/Reimbursement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Rate__c</fullName>
    <label>Reimbursement Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>