force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Fee_Schedules_contract__c/fields/Service_code__c.field-meta.xml
<CustomField>
    <fullName>Service_code__c</fullName>
    <label>Service code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>